tests/ui/pyclass_send.stderr
error[E0277]: `*mut c_void` cannot be sent between threads safely
 --> tests/ui/pyclass_send.rs:5:8
  |
5 | struct NotSyncNotSend(*mut c_void);
  |        ^^^^^^^^^^^^^^ `*mut c_void` cannot be sent between threads safely
  |
  = help: within `NotSyncNotSend`, the trait `Send` is not implemented for `*mut c_void`
note: required because it appears within the type `NotSyncNotSend`
 --> tests/ui/pyclass_send.rs:5:8
  |
5 | struct NotSyncNotSend(*mut c_void);
  |        ^^^^^^^^^^^^^^
note: required by a bound in `assert_pyclass_send_sync`
 --> src/impl_/pyclass/assertions.rs:6:8
  |
4 | pub const fn assert_pyclass_send_sync<T>()
  |              ------------------------ required by a bound in this function
5 | where
6 |     T: Send + Sync,
  |        ^^^^ required by this bound in `assert_pyclass_send_sync`

error[E0277]: `*mut c_void` cannot be shared between threads safely
 --> tests/ui/pyclass_send.rs:5:8
  |
5 | struct NotSyncNotSend(*mut c_void);
  |        ^^^^^^^^^^^^^^ `*mut c_void` cannot be shared between threads safely
  |
  = help: within `NotSyncNotSend`, the trait `Sync` is not implemented for `*mut c_void`
note: required because it appears within the type `NotSyncNotSend`
 --> tests/ui/pyclass_send.rs:5:8
  |
5 | struct NotSyncNotSend(*mut c_void);
  |        ^^^^^^^^^^^^^^
note: required by a bound in `assert_pyclass_send_sync`
 --> src/impl_/pyclass/assertions.rs:6:15
  |
4 | pub const fn assert_pyclass_send_sync<T>()
  |              ------------------------ required by a bound in this function
5 | where
6 |     T: Send + Sync,
  |               ^^^^ required by this bound in `assert_pyclass_send_sync`

error[E0277]: `*mut c_void` cannot be shared between threads safely
  --> tests/ui/pyclass_send.rs:10:8
   |
10 | struct SendNotSync(*mut c_void);
   |        ^^^^^^^^^^^ `*mut c_void` cannot be shared between threads safely
   |
   = help: within `SendNotSync`, the trait `Sync` is not implemented for `*mut c_void`
note: required because it appears within the type `SendNotSync`
  --> tests/ui/pyclass_send.rs:10:8
   |
10 | struct SendNotSync(*mut c_void);
   |        ^^^^^^^^^^^
note: required by a bound in `assert_pyclass_send_sync`
  --> src/impl_/pyclass/assertions.rs:6:15
   |
 4 | pub const fn assert_pyclass_send_sync<T>()
   |              ------------------------ required by a bound in this function
 5 | where
 6 |     T: Send + Sync,
   |               ^^^^ required by this bound in `assert_pyclass_send_sync`

error[E0277]: `*mut c_void` cannot be sent between threads safely
  --> tests/ui/pyclass_send.rs:15:8
   |
15 | struct SyncNotSend(*mut c_void);
   |        ^^^^^^^^^^^ `*mut c_void` cannot be sent between threads safely
   |
   = help: within `SyncNotSend`, the trait `Send` is not implemented for `*mut c_void`
note: required because it appears within the type `SyncNotSend`
  --> tests/ui/pyclass_send.rs:15:8
   |
15 | struct SyncNotSend(*mut c_void);
   |        ^^^^^^^^^^^
note: required by a bound in `assert_pyclass_send_sync`
  --> src/impl_/pyclass/assertions.rs:6:8
   |
 4 | pub const fn assert_pyclass_send_sync<T>()
   |              ------------------------ required by a bound in this function
 5 | where
 6 |     T: Send + Sync,
   |        ^^^^ required by this bound in `assert_pyclass_send_sync`

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0277`.
